Make DirectBufferDealloc work on Oracle/OpenJDK 8